fix: Add missing gap on some elements in mobile view

--- a/assets/scss/base/utilities.scss
+++ b/assets/scss/base/utilities.scss
@@ -60,6 +60,7 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    gap: variables.$s-3 normal;
 }
 
 .mb {
